2003-09-25  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c: sfile_lru_clear() return 0 if lru is empty
	* daemon/opd_mangling.c: abort() if lru was empty (not tested)
	* daemon/oprofiled.c: likewise; opd_alarm(): don't sfile_lru_clear()

	* utils/op_help.c:
	* daemon/opd_sfile.h:
	* daemon/opd_cookie.h: s/()/(void)/ in some function prototype and
	  definition

	* daemon/opd_cookie.c: s/"not looked up"/"not hashed"/

2003-09-25  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: push rlimit down back to 2048.
	This gives a running RSS of about 10Mb when thread
	profiling on my box, which seems reasonable (at 8192
	it was hitting 40Mb)

2003-09-25  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml: clarify what means a configured kernel.

2003-09-25  John Levon  <levon@movementarian.org>

	* daemon/opd_sfile.c: bump LRU_AMOUNT to 1000

2003-09-24  John Levon  <levon@movementarian.org>

	* doc/opcontrol.1.in:
	* doc/oprofile.xml: document thread and cpu
	profiling a bit

	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* daemon/oprofiled.c:
	* utils/opcontrol: implement per-CPU profiling,
	not tested yet

2003-09-24  John Levon  <levon@movementarian.org>

	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_test.c:
	* libdb/odb_hash.h:
	* libpp/op_header.cpp:
	* libpp/profile.cpp: remove samples_odb_t.err_msg
	entirely - prefer UNIX-style errno returns. Modify
	error messages to match

2003-09-24  John Levon  <levon@movementarian.org>

	* dae/opd_sample_files.c:
	* daemon/opd_sample_files.c:
	* libpp/op_header.cpp:
	* libpp/profile.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_test.c:
	* libdb/odb_hash.h:
	* libdb/odb_manage.c: make odb_open return errno
	instead of EXIT_FAILURE/SUCCESS to allow EMFILE
	handling. Also do not leak fd's on failure.
